# GreatCMakeCookOff

./: .gitignore  AddCPP11Flags.cmake  AddFUnit.cmake  AddGTest.cmake  AddRubyGem.cmake  CMakeLists.txt  CheckCXX11Features.cmake  CheckIsNaN.cmake  FindEigen.cmake  FindFFTW3.cmake  FindJulia.cmake  FindMKL.cmake  FindMako.cmake  GreatCMakeCookOffConfig.cmake  LookUp-GreatCMakeCookOff.cmake  README.md  TestCMake.cmake
cmake/: GreatCMakeCookOffConfig.cmake
cpp11/: has_is_move_type_traits.h
hunter_recipes/configs/: default.cmake
hunter_recipes/find/: FindGMP.cmake  FindMPFR.cmake
hunter_recipes/projects/CCFits/: hunter.cmake
hunter_recipes/projects/F2C/: hunter.cmake
hunter_recipes/projects/GBenchmark/: hunter.cmake
hunter_recipes/projects/MPFR/: hunter.cmake
hunter_recipes/projects/MPFR/schemes/: MPFR.cmake.in
modules/: CMakeLists.txt  FindCBLAS.cmake  FindCFitsIO.cmake  FindCatch.cmake  FindCoherentPython.cmake  FindEigen.cmake  FindEigen3.cmake  FindFFTW3.cmake  FindGBenchmark.cmake  FindMKL.cmake  FindNumpy.cmake  FindNumpyMKL.cmake  Findspdlog.cmake  LookUpCatch.cmake  LookUpEigen3.cmake  LookUpGBenchmark.cmake  LookUpGTest.cmake  LookUpspdlog.cmake  catch_throw_as.cc  numpy_mkl.py
scripts/: AddBenchmark.cmake  AddCPP11Flags.cmake  AddCatchTest.cmake  AddGTest.cmake  AddHunter.cmake  AddPyTest.cmake  CMakeLists.txt  CachedVariables.cmake  CallPython.cmake  CheckCXX11Features.cmake  ConfigureFiles.cmake  EnvironmentScript.cmake  MakoFiles.cmake  PackageLookup.cmake  PassonVariables.cmake  PatchScript.cmake  PythonInstall.cmake  PythonModule.cmake  PythonPackage.cmake  PythonPackageLookup.cmake  PythonVirtualEnv.cmake  TargetCopyFiles.cmake  TestCMake.cmake  Utilities.cmake  Utility.cmake  VersionAndGitRef.cmake  find_cython_deps.py  localbash.in.sh  numpy_mkl.py
scripts/cpp11/: steady_clock.cpp
scripts/cpp11/obsolete/: monotonic_clock.cpp
tests/: CMakeLists.txt  addcatchtest.cmake  addfunit.cmake  addgtest.cmake  checkcpp11flags.cmake  checkisnan.cmake  configure_files.cmake  create_environment_script.cmake  find_mkl.cmake  find_mkl_scalapack.cmake  hunter.cmake  local_include.cmake  lookup_eigen.cmake  passon_variables.cmake  run_cmake_test.cmake  self_lookup.cmake  use_external.cmake  use_external_download_by_default.cmake
tests/copy_files/: CMakeLists.txt
tests/cpp11/: CMakeLists.txt  allfeatures.cmake  parse_input_features.cmake
tests/mako/: mako_build.cmake
tests/py.test/: CMakeLists.txt  pytest_build.cmake  pytest_tests.cmake
tests/python_modules/: CMakeLists.txt  confed_build.cmake  confed_tests.cmake  cython_build.cmake  extension_build.cmake  extension_files.cmake  mako_build.cmake  mako_cython_build.cmake  mako_cython_files.cmake  mako_tests.cmake  pure_build.cmake  structure.c  structure.h  structure.mako.pyx  test_cython.py
