cmake_test(checkisnan SOURCE)
cmake_test(checkcpp11flags)
cmake_test(local_include)
cmake_test(self_lookup)
cmake_test(cached_variables)
cmake_test(passon_variables)
cmake_test(python_package)

find_program(Hg_EXECUTABLE hg)
if("${CMAKE_VERSION}" VERSION_GREATER 2.8.9 AND Hg_EXECUTABLE)
   cmake_test(lookup_eigen SOURCE)
endif()
find_program(svn_EXECUTABLE svn)
if(svn_EXECUTABLE)
    cmake_test(addgtest NOEXEC SOURCE --test-command ${CMAKE_MAKE_PROGRAM} test)
endif()

add_subdirectory(cpp11)
add_subdirectory(copy_files)
